# setup-rye-test

./: README.md  pyproject.toml
.github/workflows/: ci.yaml
src/setup_rye_test/: __init__.py
